// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > renders correctly with class 1`] = `
<div>
  <div class="absolute inline-flex items-center" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with disabled 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" disabled id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with icon 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <span class="absolute flex inset-y-0 items-center ps-3 start-0" data-slot="leading">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 ps-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with icon and leading 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <span class="absolute flex inset-y-0 items-center ps-3 start-0" data-slot="leading">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 ps-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with icon and trailing 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 pe-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
    <span class="absolute end-0 flex inset-y-0 items-center pe-3" data-slot="trailing">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
  </div>
</div>
`;

exports[`Input > renders correctly with id 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="id" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with leading and trailing icons 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <span class="absolute flex inset-y-0 items-center ps-3 start-0" data-slot="leading">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 pe-11 ps-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
    <span class="absolute end-0 flex inset-y-0 items-center pe-3" data-slot="trailing">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
  </div>
</div>
`;

exports[`Input > renders correctly with leading icon 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <span class="absolute flex inset-y-0 items-center ps-3 start-0" data-slot="leading">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="leadingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 ps-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with leading slot 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <span class="absolute flex inset-y-0 items-center ps-3 start-0" data-slot="leading">Leading slot</span>
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 ps-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with size lg 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with size md 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with size sm 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1 px-2 py-1 ring ring-accented ring-inset rounded-md text-xs transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly with trailing icon 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 pe-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
    <span class="absolute end-0 flex inset-y-0 items-center pe-3" data-slot="trailing">
      <svg aria-hidden="true" class="shrink-0 size-5 text-dimmed" data-slot="trailingIcon" height="1em" role="img" viewBox="0 0 16 16" width="1em" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" />
    </span>
  </div>
</div>
`;

exports[`Input > renders correctly with trailing slot 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 pe-11 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
    <span class="absolute end-0 flex inset-y-0 items-center pe-3" data-slot="trailing">Trailing slot</span>
  </div>
</div>
`;

exports[`Input > renders correctly with ui 1`] = `
<div>
  <div class="inline-flex items-center relative" data-slot="root">
    <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-full text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
  </div>
</div>
`;

exports[`Input > renders correctly within FormField 1`] = `
<div>
  <div class data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
        <span class="text-muted" data-slot="hint" id="v-0-hint">Hint</span>
      </div>
      <p class="text-muted" data-slot="description" id="v-0-description">Description</p>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input aria-describedby="v-0-hint v-0-description v-0-help" class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-2 px-3 py-2 ring ring-accented ring-inset rounded-md text-base transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
      <p class="mt-1 text-muted" data-slot="help" id="v-0-help">Help</p>
    </div>
  </div>
</div>
`;
